add news and remove polygon